--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ set(SETUP_PY "${CMAKE_CURRENT_BINARY_DIR}/setup.py")
 configure_file(${SETUP_PY_IN} ${SETUP_PY})
 
 # Copy python source files to binary directory
-set(PY_FILENAME_LIST "ndreg.py;landmarks.py;__init__.py")
+set(PY_FILENAME_LIST "ndreg.py;__init__.py")
 
 foreach(FILENAME ${PY_FILENAME_LIST})
   set(SRC_PY_PATH ${CMAKE_CURRENT_SOURCE_DIR}/ndreg/${FILENAME})
