--- a/setup.py.in
+++ b/setup.py.in
@@ -8,19 +8,26 @@ import io
 import os
 import sys
 from shutil import rmtree
+import re
+import sysconfig
+import platform
+import subprocess
 
+from distutils.version import LooseVersion
+from setuptools import setup, Extension
+from setuptools.command.build_ext import build_ext
 from setuptools import find_packages, setup, Command
 
 # Package meta-data.
-NAME = 'mypackage'
-DESCRIPTION = 'My short description for my project.'
-URL = 'https://github.com/me/myproject'
-EMAIL = 'me@example.com'
-AUTHOR = 'Awesome Soul'
+NAME = 'ndreg'
+DESCRIPTION = 'Registration package that does affine and LDDMM registration'
+URL = 'https://github.com/neurodata/ndreg'
+EMAIL = 'vikramc@jhmi.edu'
+AUTHOR = 'Vikram Chandrashekhar'
 
 # What packages are required for this module to be executed?
 REQUIRED = [
-    # 'requests', 'maya', 'records',
+        'requests', 'numpy', 'SimpleITK'
 ]
 
 # The rest you shouldn't have to touch too much :)
@@ -32,7 +39,7 @@ here = os.path.abspath(os.path.dirname(__file__))
 
 # Import the README and use it as the long-description.
 # Note: this will only work if 'README.rst' is present in your MANIFEST.in file!
-with io.open(os.path.join(here, 'README.rst'), encoding='utf-8') as f:
+with io.open(os.path.join(here, 'README.md'), encoding='utf-8') as f:
     long_description = '\n' + f.read()
 
 # Load the package's __version__.py module as a dictionary.
@@ -74,79 +81,67 @@ class UploadCommand(Command):
         sys.exit()
 
 
-# Where the magic happens:
-import os
-import re
-import sys
-import sysconfig
-import platform
-import subprocess
-
-from distutils.version import LooseVersion
-from setuptools import setup, Extension
-from setuptools.command.build_ext import build_ext
-
 # needed to build C++ code
-class CMakeExtension(Extension):
-    def __init__(self, name, sourcedir=''):
-        Extension.__init__(self, name, sources=[])
-        self.sourcedir = os.path.abspath(sourcedir)
-
-
-class CMakeBuild(build_ext):
-    def run(self):
-        try:
-            out = subprocess.check_output(['cmake', '--version'])
-        except OSError:
-            raise RuntimeError(
-                "CMake must be installed to build the following extensions: " +
-                ", ".join(e.name for e in self.extensions))
-
-        if platform.system() == "Windows":
-            cmake_version = LooseVersion(re.search(r'version\s*([\d.]+)',
-                                         out.decode()).group(1))
-            if cmake_version < '3.1.0':
-                raise RuntimeError("CMake >= 3.1.0 is required on Windows")
-
-        for ext in self.extensions:
-            self.build_extension(ext)
-
-    def build_extension(self, ext):
-        extdir = os.path.abspath(
-            os.path.dirname(self.get_ext_fullpath(ext.name)))
-        cmake_args = ['-DCMAKE_LIBRARY_OUTPUT_DIRECTORY=' + extdir,
-                      '-DPYTHON_EXECUTABLE=' + sys.executable]
-
-        cfg = 'Debug' if self.debug else 'Release'
-        build_args = ['--config', cfg]
-
-        if platform.system() == "Windows":
-            cmake_args += ['-DCMAKE_LIBRARY_OUTPUT_DIRECTORY_{}={}'.format(
-                cfg.upper(),
-                extdir)]
-            if sys.maxsize > 2**32:
-                cmake_args += ['-A', 'x64']
-            build_args += ['--', '/m']
-        else:
-            cmake_args += ['-DCMAKE_BUILD_TYPE=' + cfg]
-            build_args += ['--', '-j2']
-
-        env = os.environ.copy()
-        env['CXXFLAGS'] = '{} -DVERSION_INFO=\\"{}\\"'.format(
-            env.get('CXXFLAGS', ''),
-            self.distribution.get_version())
-        if not os.path.exists(self.build_temp):
-            os.makedirs(self.build_temp)
-        subprocess.check_call(['cmake', ext.sourcedir] + cmake_args,
-                              cwd=self.build_temp, env=env)
-        subprocess.check_call(['cmake', '--build', '.'] + build_args,
-                              cwd=self.build_temp)
-        print()  # Add an empty line for cleaner output
+#class CMakeExtension(Extension):
+#    def __init__(self, name, sourcedir=''):
+#        Extension.__init__(self, name, sources=[])
+#        self.sourcedir = os.path.abspath(sourcedir)
+#
+#
+#class CMakeBuild(build_ext):
+#    def run(self):
+#        try:
+#            out = subprocess.check_output(['cmake', '--version'])
+#        except OSError:
+#            raise RuntimeError(
+#                "CMake must be installed to build the following extensions: " +
+#                ", ".join(e.name for e in self.extensions))
+#
+#        if platform.system() == "Windows":
+#            cmake_version = LooseVersion(re.search(r'version\s*([\d.]+)',
+#                                         out.decode()).group(1))
+#            if cmake_version < '3.1.0':
+#                raise RuntimeError("CMake >= 3.1.0 is required on Windows")
+#
+#        for ext in self.extensions:
+#            self.build_extension(ext)
+#
+#    def build_extension(self, ext):
+#        extdir = os.path.abspath(
+#            os.path.dirname(self.get_ext_fullpath(ext.name)))
+#        cmake_args = ['-DCMAKE_LIBRARY_OUTPUT_DIRECTORY=' + extdir,
+#                      '-DPYTHON_EXECUTABLE=' + sys.executable]
+#
+#        cfg = 'Debug' if self.debug else 'Release'
+#        build_args = ['--config', cfg]
+#
+#        if platform.system() == "Windows":
+#            cmake_args += ['-DCMAKE_LIBRARY_OUTPUT_DIRECTORY_{}={}'.format(
+#                cfg.upper(),
+#                extdir)]
+#            if sys.maxsize > 2**32:
+#                cmake_args += ['-A', 'x64']
+#            build_args += ['--', '/m']
+#        else:
+#            cmake_args += ['-DCMAKE_BUILD_TYPE=' + cfg]
+#            build_args += ['--', '-j2']
+#
+#        env = os.environ.copy()
+#        env['CXXFLAGS'] = '{} -DVERSION_INFO=\\"{}\\"'.format(
+#            env.get('CXXFLAGS', ''),
+#            self.distribution.get_version())
+#        if not os.path.exists(self.build_temp):
+#            os.makedirs(self.build_temp)
+#        subprocess.check_call(['cmake', ext.sourcedir] + cmake_args,
+#                              cwd=self.build_temp, env=env)
+#        subprocess.check_call(['cmake', '--build', '.'] + build_args,
+#                              cwd=self.build_temp)
+#        print()  # Add an empty line for cleaner output
         
 # end code needed for building C++
 
 setup(
-    name="ndreg",
+    name=NAME,
     version=about['__version__'],
     description=DESCRIPTION,
     long_description=long_description,
@@ -180,9 +175,9 @@ setup(
     ],
     # $ setup.py publish support.
     # add extension module
-    ext_modules=[CMakeExtension('python_cpp_example')],
+#    ext_modules=[CMakeExtension('python_cpp_example')],
     # add custom build_ext command
-    cmdclass=dict(build_ext=CMakeBuild),
+#    cmdclass=dict(build_ext=CMakeBuild),
     zip_safe=False,
 #     cmdclass={
 #         'upload': UploadCommand,
