--- a/setup.py.in
+++ b/setup.py.in
@@ -148,6 +148,8 @@ setup(
     author_email=EMAIL,
     url=URL,
     packages=find_packages(exclude=('tests',)),
+    package_data = {'': ["metamorphosis"]},
+    include_package_data=True,
     # If your package is a single module, use this instead of 'packages':
     # py_modules=['mypackage'],
 
