bug fix in setup.py.in

--- a/setup.py.in
+++ b/setup.py.in
@@ -149,7 +149,7 @@ setup(
     url=URL,
     packages=find_packages(exclude=('tests',)),
     package_data = {'': ["metamorphosis"]},
-    include_package_data=True,
+    #include_package_data=True,
     # If your package is a single module, use this instead of 'packages':
     # py_modules=['mypackage'],
 
