--- a/requirements.txt
+++ b/requirements.txt
@@ -39,7 +39,7 @@ mistune==0.8.3
 mock==2.0.0
 nbconvert==5.3.1
 nbformat==4.4.0
-ndreg==1.0.0
+#ndreg==1.0.0
 networkx==2.1
 nose==1.3.7
 nose2==0.7.3
