adding setup.py file and modified CMake to attempt pip install

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,9 +15,9 @@ if(NOT PYTHON)
 endif()
 
 # Configure setup.py in binary directory
-set(SETUP_PY_IN "${CMAKE_CURRENT_SOURCE_DIR}/setup.py.in")
-set(SETUP_PY "${CMAKE_CURRENT_BINARY_DIR}/setup.py")
-configure_file(${SETUP_PY_IN} ${SETUP_PY})
+#set(SETUP_PY_IN "${CMAKE_CURRENT_SOURCE_DIR}/setup.py.in")
+#set(SETUP_PY "${CMAKE_CURRENT_BINARY_DIR}/setup.py")
+#configure_file(${SETUP_PY_IN} ${SETUP_PY})
 
 # Copy python source files to binary directory
 set(PY_FILENAME_LIST "ndreg.py;__init__.py")
@@ -40,14 +40,14 @@ add_subdirectory(ndreg)
 #add_executable(metamorphosis metamorphosis.cxx itkMetamorphosisImageRegistrationMethodv4.h itkMetamorphosisImageRegistrationMethodv4.hxx)
 #target_link_libraries(metamorphosis ${ITK_LIBRARIES})
 
-set(TIMESTAMP "${CMAKE_CURRENT_BINARY_DIR}/build/timestamp")
-add_custom_command(OUTPUT ${TIMESTAMP}
-    COMMAND ${PYTHON} -m py_compile ${BIN_PY_PATH_LIST} # Check for syntax errors by compiling python files
-    COMMAND ${PYTHON} ${SETUP_PY} build                 # Make the egg
-    COMMAND ${CMAKE_COMMAND} -E touch ${TIMESTAMP}      # Generate timestamp file
-    DEPENDS ${BIN_PY_PATH_LIST} metamorphosis)
-
-add_custom_target(ndreg ALL DEPENDS ${TIMESTAMP})
-
-# Install ndreg egg
-install(CODE "execute_process(COMMAND ${PYTHON} ${SETUP_PY} install --user)")
+#set(TIMESTAMP "${CMAKE_CURRENT_BINARY_DIR}/build/timestamp")
+#add_custom_command(OUTPUT ${TIMESTAMP}
+#    COMMAND ${PYTHON} -m py_compile ${BIN_PY_PATH_LIST} # Check for syntax errors by compiling python files
+#    COMMAND ${PYTHON} ${SETUP_PY} build                 # Make the egg
+#    COMMAND ${CMAKE_COMMAND} -E touch ${TIMESTAMP}      # Generate timestamp file
+#    DEPENDS ${BIN_PY_PATH_LIST} metamorphosis)
+#
+#add_custom_target(ndreg ALL DEPENDS ${TIMESTAMP})
+#
+## Install ndreg egg
+#install(CODE "execute_process(COMMAND ${PYTHON} ${SETUP_PY} install --user)")
