--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
-cmake_minimum_required(VERSION 2.6)
+cmake_minimum_required(VERSION 3.1)
 project(ndreg)
 
-set(PACKAGE_VERSION "0.0.1")
+set(PACKAGE_VERSION "0.1")
 
 # Build metamorphosis binary
 find_package(ITK)
@@ -20,7 +20,7 @@ endif()
 #configure_file(${SETUP_PY_IN} ${SETUP_PY})
 
 # Copy python source files to binary directory
-set(PY_FILENAME_LIST "ndreg.py;__init__.py")
+#set(PY_FILENAME_LIST "ndreg.py;__init__.py")
 
 foreach(FILENAME ${PY_FILENAME_LIST})
   set(SRC_PY_PATH ${CMAKE_CURRENT_SOURCE_DIR}/ndreg/${FILENAME})
