pip install works if you have the ITK libraries

--- a/ndreg/CMakeLists.txt
+++ b/ndreg/CMakeLists.txt
@@ -6,7 +6,54 @@ set(PACKAGE_VERSION "0.1")
 # Build metamorphosis binary
 find_package(ITK)
 if(NOT ITK_FOUND)
-    message(FATAL_ERROR "ITK not found. Please set ITK_DIR.")
+	#-----------------------------------------------------------------------------
+	include(ExternalProject)
+
+	set(ITK_REPOSITORY "https://github.com/InsightSoftwareConsortium/ITK.git")
+	# ITK nightly-master 2018-05-02
+	set(ITK_GIT_TAG "dbeee5a")
+
+	#-----------------------------------------------------------------------------
+	# A separate project is used to download ITK, so that it can reused
+	# when building different "flavor" of ITK python packages
+
+	message(STATUS "SuperBuild -")
+	message(STATUS "SuperBuild - ITK-source-download")
+
+	# Sanity checks
+	if(DEFINED ITK_SOURCE_DIR AND NOT EXISTS ${ITK_SOURCE_DIR})
+	message(FATAL_ERROR "ITK_SOURCE_DIR variable is defined but corresponds to nonexistent directory")
+	endif()
+
+	if(NOT DEFINED ITK_SOURCE_DIR)
+
+	set(ITK_SOURCE_DIR ${CMAKE_BINARY_DIR}/ITK-source)
+
+	ExternalProject_add(ITK-source-download
+	  SOURCE_DIR ${ITK_SOURCE_DIR}
+	  GIT_REPOSITORY ${ITK_REPOSITORY}
+	  GIT_TAG ${ITK_GIT_TAG}
+	  USES_TERMINAL_DOWNLOAD 1
+	  CONFIGURE_COMMAND ""
+	  BUILD_COMMAND ""
+	  INSTALL_COMMAND ""
+	  )
+	set(proj_status "")
+
+	else()
+
+	ipp_ExternalProject_Add_Empty(
+	  ITK-source-download
+	  ""
+	  )
+	set(proj_status " (REUSE)")
+
+	endif()
+
+	message(STATUS "SuperBuild -   ITK_SOURCE_DIR: ${ITK_SOURCE_DIR}")
+	message(STATUS "SuperBuild - ITK-source-download[OK]${proj_status}")
+
+    #message(FATAL_ERROR "ITK not found. Please set ITK_DIR.")
 endif()
 
 find_program(PYTHON "python")
