--- a/requirements.txt
+++ b/requirements.txt
@@ -1,85 +1,4 @@
-alabaster==0.7.10
-attrs==17.4.0
-Babel==2.5.3
-bleach>=2.1.3
-blosc==1.4.4
-certifi==2018.1.18
-chardet==3.0.4
-configparser==3.5.0
-coverage==4.5.1
-cycler==0.10.0
-decorator==4.2.1
-docutils==0.14
-entrypoints==0.2.3
-enum34==1.1.6
-funcsigs==1.0.2
-html5lib==1.0.1
-idna==2.6
-imagesize==1.0.0
-intern==0.9.6
-ipykernel==4.8.1
-ipyparallel==6.1.1
-ipython==5.5.0
-ipython-genutils==0.2.0
-ipywidgets==7.1.2
-Jinja2==2.10
-jsonschema==2.6.0
-jupyter==1.0.0
-jupyter-client==5.2.2
-jupyter-console==5.2.0
-jupyter-core==4.4.0
-MarkupSafe==1.0
-matplotlib==2.1.2
-mistune==0.8.3
-mock==2.0.0
-nbconvert==5.3.1
-nbformat==4.4.0
-networkx==2.1
-nose==1.3.7
-nose2==0.7.3
-notebook>=5.4.1
-numpy==1.14.0
-packaging==16.8
-pandocfilters==1.4.2
-pathlib2==2.3.0
-pbr==3.1.1
-pexpect==4.4.0
-pickleshare==0.7.4
-Pillow==5.0.0
-pluggy==0.6.0
-prompt-toolkit==1.0.15
-psutil==5.4.3
-ptyprocess==0.5.2
-py==1.5.2
-Pygments==2.2.0
-pyparsing==2.2.0
-pytest==3.4.0
-python-dateutil==2.6.1
-pytz==2018.3
-PyWavelets==0.5.2
-pyzmq==17.0.0
-qtconsole==4.3.1
-requests>=2.20.0
-scandir==1.7
-scikit-image==0.13.1
-scikit-learn==0.19.1
-scipy==1.0.0
-Send2Trash==1.5.0
-simplegeneric==0.8.1
-SimpleITK==1.0.1
-singledispatch==3.4.0.3
-six==1.11.0
-snowballstemmer==1.2.1
-Sphinx==1.7.0
-sphinxcontrib-websupport==1.0.1
-terminado==0.8.1
-testpath==0.3.1
-tifffile==0.14.0
-tornado==4.5.3
-traitlets==4.3.2
-typing==3.6.4
-urllib3>=1.23
-wcwidth==0.1.7
-webencodings==0.5.1
-widgetsnbextension==3.1.4
-numpydoc==0.7.0
+tensorflow
+numpy>=1.8.1
+nibabel
+matplotlib
